Implemented RestClient, logging and location coordinate fetching

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.properties.hibernate.default_schema=hegardt
 spring.jpa.hibernate.ddl-auto=update
+spring.quartz.job-store-type=memory
+spring.task.scheduling.pool.size=5
+
+radar.api.baseurl=https://api.radar.io/v1/geocode
+radar.api.apikey=${H_RADAR_APIKEY}
