--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'org.apache.groovy:groovy-all:4.0.26'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.5'
-    implementation 'org.springframework.boot:spring-boot-starter-quartz:3.4.5'
+//    implementation 'org.springframework.boot:spring-boot-starter-quartz:3.4.5'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // Testing
@@ -40,6 +40,7 @@ dependencies {
 
     // Codenarc
     implementation 'org.codenarc:CodeNarc:3.6.0-groovy-4.0'
+
 }
 
 tasks.named('test') {
